<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:backgroundTint="@color/background_color"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/fifthLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fourthLayout"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:clickable="false"
                android:text="@string/button_7"
                android:textSize="20sp"
                android:visibility="invisible" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:clickable="false"
                android:text="@string/button_8"
                android:textSize="20sp"
                android:visibility="invisible" />

            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:clickable="false"
                android:text="@string/button_9"
                android:textSize="20sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonDivision"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/operations_buttons_design"
                android:text="@string/button_division"
                android:textSize="24sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourthLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/thirdLayout"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/buttonSeven"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_7"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonEight"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_8"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonNine"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_9"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonMultiplication"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/operations_buttons_design"
                android:text="@string/button_multiplication"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/thirdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/secondLayout"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/buttonFour"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonFive"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_5"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSix"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_6"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonMinus"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/operations_buttons_design"
                android:text="@string/button_minus"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/firstLayout"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:onClick="operationFunction"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_1"
                android:textSize="20sp"
                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/buttonTwo"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_2"
                android:textSize="20sp"
                 />

            <Button
                android:id="@+id/buttonThree"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/number_buttons_custom_design"
                android:text="@string/button_3"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonPlus"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/operations_buttons_design"
                android:text="@string/button_plus"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_custom_border"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="8dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonZero"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/number_buttons_custom_design"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/button_0"/>
            <Button
                android:id="@+id/buttonPoint"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/number_buttons_custom_design"
                android:textSize="20sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:text="@string/button_for_float"/>

            <Button
                android:id="@+id/buttonDeleteAll"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/ac_button_design"
                android:text="@string/button_delete_all"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonEquals"
                android:onClick="operationFunction"
                tools:ignore="UsingOnClickInXml"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/equals_button_design"
                android:text="@string/button_equals"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>





</RelativeLayout>
